Implement BERT-like decoder. Create a base class for feedforward flameformer decoders.

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bert.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bert.yaml
@@ -1,13 +1,14 @@
-# @package model 
-# type: simple_transformer
-type: stf
+# @package model
+type: BertDecoder 
 num_layers: 1
-# feature_dim: 1024
 feature_dim: 64
-nhead: 16
+nhead: 4
 dropout: 0.25
 # activation: relu
 activation: gelu
+max_len: 600 
+period: 30
+vertices_dim: 15069
 positional_encoding: 
   # type: none
   # type: PositionalEncoding
@@ -16,3 +17,4 @@ positional_encoding:
   # op: concat
   max_len: 600 
   dropout: 0.1
+
