--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert.yaml
@@ -1,25 +1,22 @@
 # @package model
-type: FlameFormerDecoder 
+type: FlameBertDecoder 
 num_layers: 1
 feature_dim: 64
 nhead: 4
-max_len: 600 
-
-# dropout: 0.25
+dropout: 0.25
 # activation: relu
 activation: gelu
-vertices_dim: 15069
+max_len: 600 
 period: 30
-
+vertices_dim: 15069
 positional_encoding: 
-  # type: none
-  # type: PositionalEncoding
-
-  type: PeriodicPositionalEncoding
-  op: add
-  # op: concat
-  max_len: 600 
-  dropout: 0.1
+  type: none
+  # # type: PositionalEncoding
+  # type: PeriodicPositionalEncoding
+  # op: add
+  # # op: concat
+  # max_len: 600 
+  # dropout: 0.1
 
 flame: 
   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
@@ -33,5 +30,4 @@ flame:
 
 flame_space_loss: False 
 rotation_loss_space: 6d 
-
-rotation_representation: 6d
+rotation_representation: aa
