--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flameformer.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flameformer.yaml
@@ -34,4 +34,5 @@ flame:
 flame_space_loss: False 
 rotation_loss_space: 6d 
 
-rotation_representation: 6d
+# rotation_representation: 6d
+rotation_representation: aa
