Add the option to condition using the shape code.

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -34,10 +34,32 @@ rotation_representation: aa
 
 # style_embedding: none
 
+## shapecode
+style_embedding: 
+
+  # use_shape: false
+  use_shape: true
+
+  type: emotion_linear 
+  # use_expression: true
+  use_expression: false
+  n_expression: 8 # affectnet 
+#   n_expression: 8 # ravdess
+#   n_expression: 4 # iemocap
+#   use_valence: true
+#   use_arousal: true
+  use_valence: false
+  use_arousal: false
+  use_emotion_feature: false
+#   num_features: 2048 
+  use_bias: true
+
+
+
 ## expression
 # style_embedding: 
 
-  use_shape: false
+  # use_shape: false
   # use_shape: true
 
 #   type: emotion_linear 
@@ -56,18 +78,21 @@ rotation_representation: aa
 
 
 ## valence-arousal
-style_embedding: 
-  type: emotion_linear 
-  # use_expression: true
-  use_expression: false
-  n_expression: 8
+# style_embedding: 
+#   type: emotion_linear 
+#   # use_expression: true
+#   use_expression: false
+#   n_expression: 8
 
-  use_valence: true
-  use_arousal: true
-  # use_valence: false
-  # use_arousal: false
+#   use_valence: true
+#   use_arousal: true
+#   # use_valence: false
+#   # use_arousal: false
 
-  use_emotion_feature: false
-#   num_features: 2048 
+#   use_emotion_feature: false
+# #   num_features: 2048 
 
-  use_bias: true
+#   use_bias: true
+
+#   use_shape: false
+#   # use_shape: true
