--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -77,6 +77,27 @@ style_embedding:
   use_bias: true
 
 
+# # # ## valence-arousal
+# style_embedding: 
+#   type: emotion_linear 
+#   # use_expression: true
+#   use_expression: false
+#   n_expression: 8
+
+#   use_valence: true
+#   use_arousal: true
+#   # use_valence: false
+#   # use_arousal: false
+
+#   use_emotion_feature: false
+# #   num_features: 2048 
+
+#   use_bias: true
+
+#   # use_shape: false
+#   use_shape: true
+
+
 # # ## valence-arousal
 # style_embedding: 
 #   type: emotion_linear 
