--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -77,7 +77,7 @@ style_embedding:
   use_bias: true
 
 
-# # # ## valence-arousal
+# ## valence-arousal
 # style_embedding: 
 #   type: emotion_linear 
 #   # use_expression: true
@@ -96,6 +96,28 @@ style_embedding:
 
 #   # use_shape: false
 #   use_shape: true
+
+
+# # ## valence-arousal-expression
+# style_embedding: 
+#   type: emotion_linear 
+#   use_expression: true
+#   # use_expression: false
+#   n_expression: 8
+
+#   use_valence: true
+#   use_arousal: true
+#   # use_valence: false
+#   # use_arousal: false
+
+#   use_emotion_feature: false
+# #   num_features: 2048 
+
+#   use_bias: true
+
+#   # use_shape: false
+#   use_shape: true
+
 
 
 # # ## valence-arousal
