Forward pass and backward pass functioning for L2L VQ-VAE

--- a/gdl_apps/MotionPrior/motion_prior_conf/model/sequence_decoder/l2l_decoder.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/sequence_decoder/l2l_decoder.yaml
@@ -1,7 +1,8 @@
 # @package model 
 type: L2lDecoder
 num_layers: 12
-input_dim: 56
+# input_dim: 56
+input_dim: todo # will be set upon instantiation
 feature_dim: 256
 intermediate_size: 384
 nhead: 8
