--- a/gdl_apps/MotionPrior/motion_prior_conf/model/sequence_decoder/l2l_decoder.yaml
+++ b/gdl_apps/MotionPrior/motion_prior_conf/model/sequence_decoder/l2l_decoder.yaml
@@ -17,23 +17,30 @@ dropout: 0.
 activation: gelu
 
 positional_encoding: 
-  # type: none
+  type: none
   # type: PositionalEncoding
-  type: LearnedPositionEmbedding
-  op: add
-  # # op: concat
-  # max_len: 600 
-  # dropout: 0.
 
 
-    # "in_dim": 56,
-    # "hidden_size": 256,
-    # "num_hidden_layers": 12,
-    # "num_attention_heads": 8,
-    # "intermediate_size": 384,
-    # "quant_sequence_length": 4,
-    # "sequence_length": 32,
-    # "quant_factor": 3
+# positional_encoding: 
+#   type: LearnedPositionEmbedding
+#   op: add
+#   # # op: concat
+#   # max_len: 600 
+#   # dropout: 0.
+
+
+#     # "in_dim": 56,
+#     # "hidden_size": 256,
+#     # "num_hidden_layers": 12,
+#     # "num_attention_heads": 8,
+#     # "intermediate_size": 384,
+#     # "quant_sequence_length": 4,
+#     # "sequence_length": 32,
+#     # "quant_factor": 3
+
+temporal_bias: 
+  type: alibi_future
+  max_len: 600 
 
 
 last_layer_init: False  
