--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -18,16 +18,16 @@ positional_encoding:
   # max_len: 600 
   # dropout: 0.1
 
-# flame: 
-#   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
-#   n_shape: 100 
-#   # n_exp: 50
-#   n_exp: 100
-#   flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
+flame: 
+  flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
+  n_shape: 100 
+  # n_exp: 50
+  n_exp: 100
+  flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
 
 motion_prior: 
-  path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_12_20-01-17_-4462360882556841344_L2lVqVae_MEADP_AE"
-
+  path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_14_21-16-46_-2546611371074170025_L2lVqVae_MEADP_AE" # per sequence split
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_14_21-16-46_7403691266508414587_L2lVqVae_MEADP_AE" # per person split
 
 # predict_exp: True 
 # predict_jaw: True 
