Add a few different priors to the config

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
@@ -26,8 +26,26 @@ positional_encoding:
 #   flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
 
 motion_prior: 
-  path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_14_12-41-05_3297804622617422148_L2lVqVae_Facef_AE"  
-        
+  ## ae, latent frame size 8, latent dim 256
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_14_12-41-05_3297804622617422148_L2lVqVae_Facef_AE"  # 
+  
+  # # vae, latent frame size 8, latent dim 256, kl 0.005
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_14_12-49-06_6680122724561188325_L2lVqVae_Facef_VAE"
+
+  # # vae, latent frame size 8, latent dim 128, kl 0.005
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_16_02-21-23_-5452483093065417657_L2lVqVae_Facef_VAE"
+
+  # # vae, latent frame size 8, latent dim 64, kl 0.005
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_16_02-21-23_8934882131247866579_L2lVqVae_Facef_VAE"
+
+  # # vae, latent frame size 8, latent dim 32, kl 0.005
+  # path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_16_02-12-18_-8663630374053631856_L2lVqVae_Facef_VAE"
+
+  # vae, latent frame size 8, latent dim 16, kl 0.005
+  path: "/is/cluster/work/rdanecek/motion_prior/trainings/2023_02_16_01-54-57_1005062065405368989_L2lVqVae_Facef_VAE"
+
+
+
 flame_space_loss: False 
 rotation_loss_space: 6d 
 rotation_representation: aa
