--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -10,8 +10,8 @@ max_len: 600
 period: 30
 vertices_dim: 15069
 
-# squash_before: False
-squash_before: True
+squash_before: False
+# squash_before: True
 
 squash_after: True
 # squash_after: False
@@ -92,16 +92,16 @@ rotation_representation: aa
 #   use_bias: true
 
 
-
-## expression
+## video expression
 style_embedding: 
 
   # use_shape: false
   use_shape: true
 
   type: emotion_linear 
-  use_expression: true
-  # use_expression: false
+  use_video_expression: true
+  # use_expression: true
+  use_expression: false
   n_expression: 8 # affectnet 
   # n_expression: 8 # ravdess
   # n_expression: 4 # iemocap
@@ -112,6 +112,27 @@ style_embedding:
   use_emotion_feature: false
 #   num_features: 2048 
   use_bias: true
+
+
+# ## expression
+# style_embedding: 
+
+#   # use_shape: false
+#   use_shape: true
+
+#   type: emotion_linear 
+#   use_expression: true
+#   # use_expression: false
+#   n_expression: 8 # affectnet 
+#   # n_expression: 8 # ravdess
+#   # n_expression: 4 # iemocap
+# #   use_valence: true
+# #   use_arousal: true
+#   use_valence: false
+#   use_arousal: false
+#   use_emotion_feature: false
+# #   num_features: 2048 
+#   use_bias: true
 
 
 # ## valence-arousal
