Update experiment naming and configs

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild_videmo.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild_videmo.yaml
@@ -92,37 +92,16 @@ rotation_representation: aa
 #   use_bias: true
 
 
-# ## video expression
-# style_embedding: 
-
-#   # use_shape: false
-#   use_shape: true
-
-#   type: emotion_linear 
-#   use_video_expression: true
-#   # use_expression: true
-#   use_expression: false
-#   n_expression: 8 # affectnet 
-#   # n_expression: 8 # ravdess
-#   # n_expression: 4 # iemocap
-# #   use_valence: true
-# #   use_arousal: true
-#   use_valence: false
-#   use_arousal: false
-#   use_emotion_feature: false
-# #   num_features: 2048 
-#   use_bias: true
-
-
-## expression
+## video expression
 style_embedding: 
 
   # use_shape: false
   use_shape: true
 
   type: emotion_linear 
-  use_expression: true
-  # use_expression: false
+  use_video_expression: true
+  # use_expression: true
+  use_expression: false
   n_expression: 8 # affectnet 
   # n_expression: 8 # ravdess
   # n_expression: 4 # iemocap
@@ -133,6 +112,27 @@ style_embedding:
   use_emotion_feature: false
 #   num_features: 2048 
   use_bias: true
+
+
+# ## expression
+# style_embedding: 
+
+#   # use_shape: false
+#   use_shape: true
+
+#   type: emotion_linear 
+#   use_expression: true
+#   # use_expression: false
+#   n_expression: 8 # affectnet 
+#   # n_expression: 8 # ravdess
+#   # n_expression: 4 # iemocap
+# #   use_valence: true
+# #   use_arousal: true
+#   use_valence: false
+#   use_arousal: false
+#   use_emotion_feature: false
+# #   num_features: 2048 
+#   use_bias: true
 
 
 # ## valence-arousal
