Fix a gigantic bug - BertDecoder, FlameBert and BertPrior were never really usings its transformer. The transformer results were mistakenly not passed into the following layer. This is fixed now with a flag -> post_bug_fix which is now added to the configs. Old models don't have it so they will have this one set to False

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
@@ -15,6 +15,8 @@ squash_before: False
 squash_after: True
 # squash_after: False
 
+post_bug_fix: True
+
 squash_type: conv
 # squash_type: stack_linear
 positional_encoding: 
