--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -32,6 +32,8 @@ flame_space_loss: False
 rotation_loss_space: 6d 
 rotation_representation: aa
 
+post_bug_fix: True
+
 # style_embedding: none
 
 # # shapecode
