--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild_videmo.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild_videmo.yaml
@@ -31,6 +31,7 @@ flame:
 flame_space_loss: False 
 rotation_loss_space: 6d 
 rotation_representation: aa
+post_bug_fix: True
 
 # style_embedding: none
 
