--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior.yaml
@@ -1,6 +1,7 @@
 # @package model
 type: BertPriorDecoder 
-num_layers: 1
+num_layers: 0
+# num_layers: 1
 feature_dim: 64
 nhead: 4
 dropout: 0.25
@@ -12,13 +13,14 @@ vertices_dim: 15069
 
 squash_before: False
 # squash_before: True
+
 squash_after: True
 # squash_after: False
 
 post_bug_fix: True
 
-squash_type: conv
-# squash_type: stack_linear
+# squash_type: conv
+squash_type: stack_linear
 positional_encoding: 
   type: none
   # # type: PositionalEncoding
