--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -75,25 +75,25 @@ post_bug_fix: True
 
 # style_embedding: none
 
-# # shapecode
-# style_embedding: 
+# shapecode
+style_embedding: 
 
-#   # use_shape: false
-#   use_shape: true
+  # use_shape: false
+  use_shape: true
 
-#   type: emotion_linear 
-#   # use_expression: true
-#   use_expression: false
-#   n_expression: 8 # affectnet 
-# #   n_expression: 8 # ravdess
-# #   n_expression: 4 # iemocap
-# #   use_valence: true
-# #   use_arousal: true
-#   use_valence: false
-#   use_arousal: false
-#   use_emotion_feature: false
-# #   num_features: 2048 
-#   use_bias: true
+  type: emotion_linear 
+  # use_expression: true
+  use_expression: false
+  n_expression: 8 # affectnet 
+#   n_expression: 8 # ravdess
+#   n_expression: 4 # iemocap
+#   use_valence: true
+#   use_arousal: true
+  use_valence: false
+  use_arousal: false
+  use_emotion_feature: false
+#   num_features: 2048 
+  use_bias: true
 
 
 # ## video expression
@@ -118,25 +118,25 @@ post_bug_fix: True
 #   use_bias: true
 
 
-## expression
-style_embedding: 
+# ## expression
+# style_embedding: 
 
-  # use_shape: false
-  use_shape: true
+#   # use_shape: false
+#   use_shape: true
 
-  type: emotion_linear 
-  use_expression: true
-  # use_expression: false
-  n_expression: 8 # affectnet 
-  # n_expression: 8 # ravdess
-  # n_expression: 4 # iemocap
-#   use_valence: true
-#   use_arousal: true
-  use_valence: false
-  use_arousal: false
-  use_emotion_feature: false
-#   num_features: 2048 
-  use_bias: true
+#   type: emotion_linear 
+#   use_expression: true
+#   # use_expression: false
+#   n_expression: 8 # affectnet 
+#   # n_expression: 8 # ravdess
+#   # n_expression: 4 # iemocap
+# #   use_valence: true
+# #   use_arousal: true
+#   use_valence: false
+#   use_arousal: false
+#   use_emotion_feature: false
+# #   num_features: 2048 
+#   use_bias: true
 
 
 # ## valence-arousal
