--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -75,40 +75,18 @@ post_bug_fix: True
 
 # style_embedding: none
 
-# shapecode
-style_embedding: 
-
-  # use_shape: false
-  use_shape: true
-
-  type: emotion_linear 
-  # use_expression: true
-  use_expression: false
-  n_expression: 8 # affectnet 
-#   n_expression: 8 # ravdess
-#   n_expression: 4 # iemocap
-#   use_valence: true
-#   use_arousal: true
-  use_valence: false
-  use_arousal: false
-  use_emotion_feature: false
-#   num_features: 2048 
-  use_bias: true
-
-
-# ## video expression
+# # shapecode
 # style_embedding: 
 
 #   # use_shape: false
 #   use_shape: true
 
 #   type: emotion_linear 
-#   use_video_expression: true
 #   # use_expression: true
 #   use_expression: false
 #   n_expression: 8 # affectnet 
-#   # n_expression: 8 # ravdess
-#   # n_expression: 4 # iemocap
+# #   n_expression: 8 # ravdess
+# #   n_expression: 4 # iemocap
 # #   use_valence: true
 # #   use_arousal: true
 #   use_valence: false
@@ -116,6 +94,28 @@ style_embedding:
 #   use_emotion_feature: false
 # #   num_features: 2048 
 #   use_bias: true
+
+
+## video expression
+style_embedding: 
+
+  # use_shape: false
+  use_shape: true
+
+  type: emotion_linear 
+  use_video_expression: true
+  # use_expression: true
+  use_expression: false
+  n_expression: 8 # affectnet 
+  # n_expression: 8 # ravdess
+  # n_expression: 4 # iemocap
+#   use_valence: true
+#   use_arousal: true
+  use_valence: false
+  use_arousal: false
+  use_emotion_feature: false
+#   num_features: 2048 
+  use_bias: true
 
 
 # ## MEAD video expression
