--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -86,10 +86,12 @@ style_embedding:
 
   type: emotion_linear 
   use_video_expression: false 
+  # use_video_expression: true 
 
   gt_expression_label: True
-  gt_expression_intensity: True
-  # gt_expression_intensity: False
+  # gt_expression_label: False
+  # gt_expression_intensity: True
+  gt_expression_intensity: False
   n_intensities: 3
 
   # use_expression: true
