Traning and conditioning with the video emotion feature vector.

--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -103,7 +103,11 @@ style_embedding:
   use_shape: true
 
   type: emotion_linear 
-  use_video_expression: true
+  # use_video_expression: true
+  use_video_feature: false
+  # use_video_feature: true
+  # n_vid_expression_feature: 512 # needs to be changed based on the emotion feature
+
   # use_expression: true
   use_expression: false
   n_expression: 8 # affectnet 
