--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -64,6 +64,9 @@ post_bug_fix: True
 
 #   type: emotion_linear 
 #   use_video_expression: true
+  # # use_video_feature: false
+  # use_video_feature: true
+  # n_vid_expression_feature: 512 # needs to be changed based on the emotion feature
 #   # use_expression: true
 #   use_expression: false
 #   n_expression: 8 # affectnet 
