--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -19,6 +19,10 @@ squash_after: True
 squash_type: conv
 # squash_type: stack_linear
 
+# style_op: add
+# style_op: style_only
+
+
 positional_encoding: 
   type: none
   # # type: PositionalEncoding
@@ -122,7 +126,7 @@ style_embedding:
   use_bias: true
 
 
-# ## MEAD video expression
+# # ## MEAD video expression
 # style_embedding: 
 
 #   # use_shape: false
