--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -20,7 +20,8 @@ positional_encoding:
 
 flame: 
   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
-  n_shape: 100 
+  # n_shape: 100 
+  n_shape: 300 
   # n_exp: 50
   n_exp: 100
   flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
@@ -81,7 +82,7 @@ post_bug_fix: True
 #   use_bias: true
 
 
-## MEAD video expression
+# # # ## MEAD video expression, intensity and identity
 style_embedding: 
 
   # use_shape: false
@@ -89,13 +90,15 @@ style_embedding:
 
   type: emotion_linear 
   use_video_expression: false 
-  # use_video_expression: true 
 
   gt_expression_label: True
-  # gt_expression_label: False
-  # gt_expression_intensity: True
-  gt_expression_intensity: False
+  gt_expression_intensity: True
+  # gt_expression_intensity: False
   n_intensities: 3
+  
+  gt_expression_identity: True
+  n_identities: todo
+  disentangle_identity: False
 
   # use_expression: true
   use_expression: false
@@ -109,6 +112,35 @@ style_embedding:
   use_emotion_feature: false
 #   num_features: 2048 
   use_bias: true
+
+# ## MEAD video expression
+# style_embedding: 
+
+#   # use_shape: false
+#   use_shape: true
+
+#   type: emotion_linear 
+#   use_video_expression: false 
+#   # use_video_expression: true 
+
+#   gt_expression_label: True
+#   # gt_expression_label: False
+#   # gt_expression_intensity: True
+#   gt_expression_intensity: False
+#   n_intensities: 3
+
+#   # use_expression: true
+#   use_expression: false
+#   n_expression: 8 # affectnet 
+#   # n_expression: 8 # ravdess
+#   # n_expression: 4 # iemocap
+# #   use_valence: true
+# #   use_arousal: true
+#   use_valence: false
+#   use_arousal: false
+#   use_emotion_feature: false
+# #   num_features: 2048 
+#   use_bias: true
 
 
 
