--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild_videmo.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild_videmo.yaml
@@ -30,7 +30,8 @@ positional_encoding:
 
 flame: 
   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
-  n_shape: 100 
+  # n_shape: 100 
+  n_shape: 300 
   # n_exp: 50
   n_exp: 100
   flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
