--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -2,7 +2,11 @@
 type: FlameBertDecoder 
 num_layers: 1
 feature_dim: 64
+# feature_dim: 128
+# feature_dim: 256
 nhead: 4
+# nhead: 8
+# nhead: 16
 dropout: 0.25
 # activation: relu
 activation: gelu
