--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/faceformer_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/faceformer_wild.yaml
@@ -1,41 +1,23 @@
 # @package model
-type: FlameFormerDecoder 
+type: FaceFormerDecoder 
 num_layers: 1
 feature_dim: 64
 nhead: 4
-max_len: 600 
-
-# dropout: 0.25
+dropout: 0.25
 # activation: relu
 activation: gelu
-vertices_dim: 15069
+max_len: 600 
 period: 30
-
+vertices_dim: 15069
 positional_encoding: 
   # type: none
   # type: PositionalEncoding
-
   type: PeriodicPositionalEncoding
   op: add
   # op: concat
   max_len: 600 
   dropout: 0.1
 
-flame: 
-  flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
-  # n_shape: 100 
-  n_shape: 300 
-  # n_exp: 50
-  n_exp: 100
-  flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy 
-
-# predict_exp: True 
-# predict_jaw: True 
-
-flame_space_loss: False 
-rotation_loss_space: 6d 
-
-rotation_representation: aa
 
 # # # ## MEAD video expression, intensity and identity
 style_embedding: 
@@ -67,6 +49,7 @@ style_embedding:
   use_emotion_feature: false
 #   num_features: 2048 
   use_bias: true
+
 
 # ## MEAD video expression
 # style_embedding: 
