--- a/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/faceformer_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/faceformer_wild.yaml
@@ -1,8 +1,11 @@
 # @package model
 type: FaceFormerDecoder 
 num_layers: 1
-feature_dim: 64
-nhead: 4
+# feature_dim: 64
+feature_dim: 128
+# feature_dim: 256
+# nhead: 4
+nhead: 8
 dropout: 0.25
 # activation: relu
 activation: gelu
@@ -29,6 +32,7 @@ style_embedding:
   use_video_expression: false 
 
   gt_expression_label: True
+  # gt_expression_label: False
   gt_expression_intensity: True
   # gt_expression_intensity: False
   n_intensities: 3
