--- a/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -134,8 +134,8 @@ post_bug_fix: True
 # # # ## MEAD video expression, intensity and identity
 style_embedding: 
 
-  # use_shape: false
-  use_shape: true
+  use_shape: false
+  # use_shape: true
 
   type: emotion_linear 
   use_video_expression: false 
