--- a/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
+++ b/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/bertprior_wild.yaml
@@ -27,6 +27,7 @@ squash_type: stack_linear
 # style_op: style_only
 
 
+## Default - no positional encoding but use the FaceFormer-like temporal bias
 positional_encoding: 
   type: none
   # # type: PositionalEncoding
@@ -35,6 +36,7 @@ positional_encoding:
   # # op: concat
   # max_len: 600 
   # dropout: 0.1
+temporal_bias_type: faceformer_future
 
 flame: 
   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
