--- a/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
+++ b/inferno_apps/TalkingHead/talkinghead_conf/model/sequence_decoder/flamebert_wild.yaml
@@ -22,6 +22,8 @@ positional_encoding:
   max_len: 600 
   dropout: 0.1
 
+temporal_bias_type: faceformer_future
+
 flame: 
   flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl 
   # n_shape: 100 
